@@ -1,7 +1,7 @@
 ##########################################################################
 #  
 #  Copyright (c) 2011, John Haddon. All rights reserved.
-#  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2011-2012, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -110,6 +110,8 @@ from VectorDataWidget import VectorDataWidget
 from PathVectorDataWidget import PathVectorDataWidget
 from ProgressBar import ProgressBar
 from SelectionMenu import SelectionMenu
+from PathFilterWidget import PathFilterWidget
+from CompoundPathFilterWidget import CompoundPathFilterWidget
 
 # then stuff specific to graph uis
 
